<resources>
    <string name="app_name">Presensi GPS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="todo">TODO</string>
    <string name="login">Masuk</string>
    <string name="login_disini">Masuk disini</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar_disini">hubungi admin</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun ? Masuk</string>
    <string name="jabatan">Jabatan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="title_activity_maps">Map</string>
    <string name="hadir">Hadir</string>
    <string name="pulang">Pulang</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="tentang">Tentang</string>
    <string name="ok">OK</string>
    <string name="keluar">Keluar</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="telat">Telat</string>
    <string name="verifikasi">Verifikasi ?</string>
    <string name="not_verifikasi">Belum diverifikasi</string>
    <string name="telah_diverifikasi">Telah diverifikasi</string>
    <string name="nama">Nama</string>
    <string name="report_berhasil">Laporan Berhasil Terkirim</string>
    <string name="report_gagal">Laporan Gagal, Terjadi Kesalahan</string>
    <string name="presensi_berhasil">Presensi Berhasil Terkirim, Selamat Bekerja</string>
    <string name="presensi_gagal">Presensi Gagal, Terjadi Kesalahan</string>
    <string name="success">SUKSES</string>
    <string name="gagal">GAGAL</string>
    <string name="laporan">Laporan</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="foto">Foto</string>
    <string name="kirim">Kirim</string>
    <string name="catatan">Catatan</string>
    <string name="lokasi">Lokasi</string>
    <string name="batal">Batal</string>
    <string name="profil">Profil</string>
    <string name="x">X</string>
    <string name="admin">Admin</string>
    <string name="presensi">Presensi</string>
    <string name="akun">Akun</string>
    <string name="maps">Maps</string>
    <string name="pukul">Pukul</string>
    <string name="tanggal">Tanggal</string>
    <string name="edit">Edit</string>
    <string name="title_activity_maps_info">Map</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="semua">Semua</string>
    <string name="tidak_ada_laporan_hari_ini">Tidak Ada Laporan Hari ini</string>
    <string name="cetak">Cetak</string>
    <string name="tahun">Tahun</string>
    <string-array name="menu_spinner">
        <item>Pilih Kopi</item>
        <item>Kopi SOE</item>
        <item>Kopi Janji Jiwa</item>
        <item>Kopi Kenangan</item>
        <item>Fore Coffee</item>
        <item>Kedai Kopi Kulo</item>
    </string-array>
</resources>