<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentMapsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/gray"
        android:paddingVertical="12dp"
        android:text="@string/hadir"
        map:cornerRadius="12dp"
        map:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/light_gray"
        map:cardCornerRadius="16dp"
        android:visibility="invisible"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgStatus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher"
                map:layout_constraintLeft_toLeftOf="parent"
                map:layout_constraintRight_toRightOf="parent"
                map:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18sp"
                android:textSize="18sp"
                map:layout_constraintLeft_toLeftOf="@id/imgStatus"
                map:layout_constraintRight_toRightOf="@id/imgStatus"
                map:layout_constraintTop_toBottomOf="@+id/imgStatus"
                tools:text="Status" />

            <TextView
                android:id="@+id/tvKetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:paddingHorizontal="32dp"
                map:layout_constraintLeft_toLeftOf="@id/imgStatus"
                map:layout_constraintRight_toRightOf="@id/imgStatus"
                map:layout_constraintTop_toBottomOf="@id/tvStatus"
                tools:text="Hadir!, Selamat bekerja" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="4dp"
                android:backgroundTint="@color/white"
                android:text="@string/ok"
                android:textColor="@color/dark_green"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintTop_toBottomOf="@+id/tvKetStatus"
                map:strokeColor="@color/dark_green"
                map:strokeWidth="1dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


