<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentNameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingHorizontal="32dp">

            <ImageView
                android:id="@+id/icStatus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_success"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="24dp"
                android:gravity="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/icStatus"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Charles" />

            <ImageView
                android:id="@+id/icDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="32dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPresence"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="14dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toTopOf="@id/tvOffice"
                app:layout_constraintLeft_toRightOf="@id/imgPresence"
                app:layout_constraintTop_toTopOf="@+id/imgPresence"
                tools:text="Charles" />

            <TextView
                android:id="@+id/tvOffice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toTopOf="@id/tvDate"
                app:layout_constraintLeft_toRightOf="@id/imgPresence"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvName2"
                tools:text="PT Lapi Laboratories Cabang Makassar Indonesia" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@id/imgPresence"
                app:layout_constraintLeft_toRightOf="@id/imgPresence"
                app:layout_constraintTop_toBottomOf="@id/tvOffice"
                tools:text="20021-06-13" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@id/tvDate"
                app:layout_constraintLeft_toRightOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/tvDate"
                tools:text="12:00:00" />

            <TextView
                android:id="@+id/tvVerifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifikasi"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/btnVerifikasi"
                app:layout_constraintRight_toRightOf="@id/btnVerifikasi"
                app:layout_constraintTop_toBottomOf="@id/tvDate"
                app:layout_constraintTop_toTopOf="@id/btnVerifikasi" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/white"
                android:text="@string/telah_diverifikasi"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
